assets/css/style.scss
/* ... */
@include media-breakpoint-up(md) {
  .aspect_ratio {
    height: 0;
    padding-bottom: 67%;
    position: relative;
    align-content: center;

    > * {
      position: absolute;
      top: 0;
      left: 0;
      bottom: 0;
      right: 0;
    }
  }
}

.aspect_ratio-md {
  @extend .aspect_ratio;
}

.box-shadow {
  box-shadow: 0 5px 10px #0005;
}
.shadow-sm {
  box-shadow: 0 0 2px rgba(0, 0, 0, 0.4) !important;
}
.shadow-sm-md-none {
  @include media-breakpoint-up(md) {
    box-shadow: none !important;
  }
}
.bg-tranition {
  transition: background-color $transition ease;
}

body:not(.admin) {
  .form-control {
    background-color: transparent;

    &:focus,
    &:active {
      background-color: white !important;
    }
  }
}

.blue-overlay {
  position: relative;

  &:after {
    content: "";
    width: 100%;
    height: 100%;
    position: absolute;
    left: 0;
    top: 0;
    background-color: $blue;
    opacity: 0.3;
    z-index: 1;
  }
}

.blended {
  background-color: $blue;
  background-blend-mode: multiply;
}

.rounded {
  border-radius: 0.15rem !important;
}
.rounded-md {
  border-radius: 1rem !important;
}
.rounded-lg {
  border-radius: 30px !important;
}

.history-line {
  hr {
    border-top: 5px solid $blue;
  }

  hr.arrow {
    &:after {
      content: "";
      width: 0;
      height: 0;
      border-top: 10px solid transparent;
      border-bottom: 10px solid transparent;
      border-left: 10px solid $blue;
      display: block;
      float: right;
      transform: translate(100%, calc(-50% - 2.5px));
    }
  }

  .line {
    transform: translateX(calc(50% + 12.5px));
  }

  .circle {
    width: 25px;
    height: 25px;
    border-radius: 50%;
    border: 5px solid $blue;
    transform: translate(-27px, 31.5px);
  }
}

.call-to-action {
  width: 100%;
  min-height: 33vh;
}

canvas#polygons {
  width: 100%;
  height: 100%;
  position: absolute;
  left: 0;
  top: 0;
  background-color: $primary;
}

.translation_preview {
  color: pink;
  font-size: 16px;
  position: absolute;
  left: 50%;
  transform: translateX(-50%);
}

.w-md-50 {
  @include media-breakpoint-up(md) {
    width: 50%;
  }
}

.mh-33 {
  min-height: 33vh;
}

.alert.flash {
  position: fixed;
  bottom: 50px;
  z-index: 999999;
  right: 0;
}

.bg-md-transparent {
  @include media-breakpoint-up(lg) {
    background-color: transparent !important;
  }
}

.z-foreground {
  z-index: 2 !important;
}

body[class*="admin-pages-edit-"],
body[class*="pages-"] {
  .ql-image {
    max-width: 100%;
  }

  @include media-breakpoint-up(md) {
    span.ql-size-small,
    img.ql-size-small {
      width: 50%;
      display: block;
    }
  }
  .ql-align-center {
    text-align: center;
  }
  .ql-align-right img {
    padding: 0.5em 0 0.5em 0.5em;
    float: right;
  }

  .ql-align-left img {
    padding: 0.5em 0.5em 0.5em 0;
    float: left;
  }

  pre {
    position: relative;
    color: white;
    overflow: unset;
    white-space: pre-wrap;
    padding: 2em 0;

    &:after {
      z-index: -1;
      content: "";
      position: absolute;
      background: $primary-light;
      top: 0;
      left: 50%;
      transform: translateX(-50%);
      bottom: 0;
      width: 100vw;
      right: 0;
    }
  }
}

#courseScrollspy {
  background-image: url("~/media/circuit-board.svg");
  background-repeat: repeat;
}

.fullbleed {
  @include media-breakpoint-down(md) {
    max-width: none;
  }
}
.vertical-align-revert {
  &,
  > svg {
    vertical-align: revert;
  }
}

@keyframes spinning {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
}

.rotating {
  animation: spinning 3s linear infinite;
}
.transform-absolute-center {
  top: 50%;
  transform: translateY(-50%);
}

#cookiehint {
  transition: opacity 0.3s ease, transform 0.3s ease;
  transform: translateY(100%);

  &.shown {
    svg {
      transform: rotate(-360deg);
    }
    transform: translateY(0);
  }

  .alert {
    border-radius: 0;

    svg {
      min-width: 30px;
      transition: transform 1s ease;
      width: 1em;
      fill: white;
      vertical-align: text-top;
    }
  }
}

.text-underline {
  &,
  &:link {
    text-decoration: underline !important;
  }
}
.text-underline-bold {
  position: relative;
  width: 100%;
  &:after {
    content: "";
    display: block;
    position: absolute;
    left: 0;
    width: 100%;
    bottom: 0;
    height: 5px;
    background-color: inherit;
  }
}
.circle {
  width: 3em;
  height: 3em;
  border-radius: 50%;
  text-align: center;
  display: flex;
  justify-content: center;
  align-items: center;
}

.afterdot {
  position: relative;
  width: 0.3em;
  height: 0.3em;
  display: inline-block;
}
.line-height-2-5 {
  line-height: 2.5;
}
.line-height-0 {
  line-height: 0;
}
.hover-transparent {
  transition: opacity $transition ease;
  &:hover {
    opacity: 0.8;
  }
}

.container-wide {
  max-width: 1600px;
}

.padded-text {
  padding-block: 5px;
  padding-inline: 5px;
  box-decoration-break: clone;
}
.mt-y-xl-5 {
  @media (min-height: 800px)  { 
    margin-top: 3rem !important;  
  }
}
.jumbotron-polygon {
  position: absolute;
  left: 50%;
  width: 100vw;
  height: 50% !important;
  transform: translate(-50%);
  bottom: 0;
  top: auto;
  @include media-breakpoint-up(md) {
    left: auto;
    bottom: auto;
    height: 100% !important;
    top: 0;
    right: 50%;
    clip-path: polygon(0px 0px, calc(100% - 50px) 10.86%, 100% 100%, 0% 100%);
    transform: unset;
  }
}

.border-top-2 {
  border-top-width: 2px;
}
.border-red {
  border-color: $red-light!important;
}
.careerwave {
  background-image: url('/media/wave.svg');
  background-size: cover;
  background-repeat: repeat-x;
  @include media-breakpoint-up(md) {
    background-size: contain;
  }
}
.list-style-none {
  list-style: none;
}
.badge-primary-trans {
  background-color: $primary-trans;
}
/* ... */

